# fid-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  README.tpl  aliases.js  search-index.js  settings.html  source-files.js
.github/workflows/: clippy.yml
benches/: bench.rs
ci/: before_script.sh  pr-check-fix.sh  script.sh
criterion/[40f52ab] Fid__from(&[false; N])/1048576/base/: sample.json
criterion/[40f52ab] Fid__from(&[false; N])/1048576/new/: benchmark.json  estimates.json  raw.csv  tukey.json
criterion/[40f52ab] Fid__from(&[false; N])/1048576/report/: index.html
criterion/[40f52ab] Fid__from(&[false; N])/131072/base/: estimates.json  sample.json
criterion/[40f52ab] Fid__from(&[false; N])/131072/new/: benchmark.json  raw.csv  tukey.json
criterion/[40f52ab] Fid__from(&[false; N])/131072/report/: index.html
criterion/[40f52ab] Fid__from(&[false; N])/262144/base/: raw.csv  sample.json  tukey.json
criterion/[40f52ab] Fid__from(&[false; N])/262144/new/: benchmark.json  estimates.json
criterion/[40f52ab] Fid__from(&[false; N])/262144/report/: index.html
criterion/[40f52ab] Fid__from(&[false; N])/524288/base/: raw.csv  (+1 more)
criterion/[40f52ab] Fid__from(&[false; N])/report/: index.html
criterion/[40f52ab] Fid__from(_00...(repeated N-times)_)/report/: index.html
criterion/[40f52ab] Fid__rank(N) 1000000 times/report/: index.html
criterion/[40f52ab] Fid__rank0(N) 1000000 times/report/: index.html
criterion/[40f52ab] Fid__select(N) 1000 times/report/: index.html
criterion/[40f52ab] Fid__select0(N) 1000 times/report/: index.html
criterion/report/: index.html
fid_rs/: all.html  index.html
fid_rs/fid/: index.html  struct.Fid.html  struct.FidIter.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.AsRef.js  trait.From.js  trait.Into.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: bit_string.rs  fid.rs  internal_data_structure.rs  lib.rs  louds.rs  succinct_bit_vector.rs
src/fid/: blocks.rs  chunk.rs  chunks.rs  fid.rs  fid_builder.rs  fid_impl.rs  fid_iter.rs
src/fid_rs/: fid.rs.html  internal_data_structure.rs.html  lib.rs.html
src/fid_rs/fid/: block.rs.html  blocks.rs.html  chunk.rs.html  chunks.rs.html  fid.rs.html  fid_iter.rs.html
src/fid_rs/internal_data_structure/: popcount_table.rs.html  raw_bit_vector.rs.html
src/internal_data_structure/: bit_string.rs  popcount_table.rs  raw_bit_vector.rs
src/louds/: louds.rs  louds_builder.rs  louds_index.rs  louds_node_num.rs
src/succinct_bit_vector/: block.rs  blocks.rs  succinct_bit_vector.rs  succinct_bit_vector_builder.rs
tests/: louds_test.rs  succinct_bit_vector_test.rs  test.rs
(+169 files in other folders)
