[package]
name = "fid-rs"
version = "0.1.2-alpha.0"
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
description = "High performance FID (Fully Indexable Dictionary) library"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/laysakura/fid-rs"
homepage = "https://github.com/laysakura/fid-rs"
keywords = ["fid", "succinct-bit-vector"] # up to 5 keywords, each keyword should have <= 20 chars
categories = ["compression", "data-structures"]
edition = "2018"

[dependencies]
# Rayon is an optional feature, which is enabled by default.
# It is used to crate the Chunks collection in parallel.
rayon = { version = "1.5", optional = true }
# Serde is another optional feature, which can be enabled by setting `serde` feature.
# It is used to serialize and deserialize the FID structure.
serde = { version = "1.0", optional = true, features = ["derive"] }


[dev-dependencies]
criterion = "0.2"
rand = "0.6"

[[bench]]
name = "bench"
harness = false

[package.metadata.release]
tag-prefix = "v"
pre-release-hook = ["emacs", "CHANGELOG.md"]  # Finally, I found this hook so effective!!
disable-publish = true

[features]
default = ["rayon"]
