[package]
name = "fid-rs"
version = "0.1.2-alpha.0"
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
description = "High performance FID (Fully Indexable Dictionary) library"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/laysakura/fid-rs"
homepage = "https://github.com/laysakura/fid-rs"
keywords = ["fid", "succinct-bit-vector"] # up to 5 keywords, each keyword should have <= 20 chars
categories = ["compression", "data-structures"]
edition = "2018"

[dependencies]
rayon = "1.0"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "bench"
harness = false

[package.metadata.release]
tag-prefix = "v"
pre-release-hook = ["emacs", "CHANGELOG.md"]  # Finally, I found this hook so effective!!
disable-publish = true
